[Input] Fix cross hiding on ie.

--- a/components/Input/Input.less
+++ b/components/Input/Input.less
@@ -23,7 +23,7 @@
     width: 100%;
   }
 
-  .input:-ms-clear {
+  .input::-ms-clear {
     display: none;
   }
 
